// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App can render many things at once when so configured 1`] = `
<div
  className="root"
>
  <TitleBar
    label="Wings"
  />
  <div
    className="main"
  >
    <CommandBar />
    <TreeView />
    <Pane
      isFirst={true}
      paneId={1}
    />
    <Pane
      isFirst={false}
      paneId={2}
    />
    <Browser />
  </div>
</div>
`;

exports[`App defaults to rendering a logo in an empty state 1`] = `
<div
  className="root"
>
  <div
    className="main"
  >
    <Logo />
  </div>
</div>
`;

exports[`App renders a Browser when so configured 1`] = `
<div
  className="root"
>
  <div
    className="main"
  >
    <Logo />
    <Browser />
  </div>
</div>
`;

exports[`App renders a CommandBar when so configured 1`] = `
<div
  className="root"
>
  <div
    className="main"
  >
    <CommandBar />
    <Logo />
  </div>
</div>
`;

exports[`App renders a Pane when so configured 1`] = `
<div
  className="root"
>
  <div
    className="main"
  >
    <Pane
      isFirst={true}
      paneId={1}
    />
  </div>
</div>
`;

exports[`App renders a TitleBar when so configured 1`] = `
<div
  className="root"
>
  <TitleBar
    label="Wings"
  />
  <div
    className="main"
  >
    <Logo />
  </div>
</div>
`;

exports[`App renders a TreeView when so configured 1`] = `
<div
  className="root"
>
  <div
    className="main"
  >
    <TreeView />
    <Logo />
  </div>
</div>
`;

exports[`App renders multiple instances of Pane when so configured 1`] = `
<div
  className="root"
>
  <div
    className="main"
  >
    <Pane
      isFirst={true}
      paneId={1}
    />
    <Pane
      isFirst={false}
      paneId={2}
    />
  </div>
</div>
`;

exports[`App showOrHideTitleBar should render an error boundary when there is an error 1`] = `
<div
  className="root"
>
  <div
    className="main"
  >
    <Logo />
  </div>
</div>
`;

exports[`App showOrHideTitleBar should render an error boundary when there is an error 2`] = `
<div
  className="root"
>
  <div
    className="root"
  >
    <div
      className="type"
    >
      Error
    </div>
    <div>
      an error
    </div>
    <div
      className="info"
    >
      some stack info
    </div>
  </div>
</div>
`;
